style: about img fix 1. Adjust size of about img on mobile to 100%

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -78,4 +78,10 @@
     }
     
     .col-12{ width: 100%; }
+
+    /* About */
+    .about__img{
+        max-width: 100%;
+        max-width: -webkit-fill-available;
+    }
 }
